@@ -1,13 +1,11 @@
 package ru.hh.jclient.common.balancing;
 
-import javax.annotation.Nullable;
-
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.toList;
 import static ru.hh.jclient.common.balancing.BalancingStrategy.getLeastLoadedServer;
 
+import javax.annotation.Nullable;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -49,15 +47,14 @@ public class Upstream {
     this.enabled = enabled;
   }
 
-  ServerEntry acquireServer(Set<Integer> excludedServers) {
+  ServerEntry acquireServer(Set<Integer> excludedServers, List<Server> servers) {
     configReadLock.lock();
     try {
-      List<Server> servers = upstreamConfig.getServers();
       int index = getLeastLoadedServer(servers, excludedServers, datacenter, allowCrossDCRequests);
       if (index >= 0) {
         Server server = servers.get(index);
         server.acquire();
-        return new ServerEntry(index, server.getAddress(), server.getRack(), server.getDatacenter());
+        return new ServerEntry(index, server.getAddress(), server.getDatacenter());
       }
       return null;
     } finally {
@@ -65,10 +62,9 @@ public class Upstream {
     }
   }
 
-  List<ServerEntry> acquireAdaptiveServers(int retriesCount) {
+  List<ServerEntry> acquireAdaptiveServers(int retriesCount,  List<Server> servers) {
     configReadLock.lock();
     try {
-      List<Server> servers = upstreamConfig.getServers();
       List<Server> allowedServers = new ArrayList<>();
       List<Integer> allowedIds = new ArrayList<>();
       for (int i = 0; i < servers.size(); i++) {
@@ -84,7 +80,7 @@ public class Upstream {
           .stream()
           .map(id -> {
             Server server = allowedServers.get(id);
-            return new ServerEntry(allowedIds.get(id), server.getAddress(), server.getRack(), server.getDatacenter());
+            return new ServerEntry(allowedIds.get(id), server.getAddress(), server.getDatacenter());
           })
           .collect(toList());
     } finally {
@@ -92,18 +88,17 @@ public class Upstream {
     }
   }
 
-  ServerEntry acquireServer() {
-    return acquireServer(Collections.emptySet());
+  ServerEntry acquireServer(List<Server> servers) {
+    return acquireServer(Set.of(), servers);
   }
 
-  void releaseServer(int serverIndex, boolean isError, long responseTimeMicros) {
-    releaseServer(serverIndex, isError, responseTimeMicros, false);
+  void releaseServer(int serverIndex, boolean isError, long responseTimeMicros, List<Server> servers) {
+    releaseServer(serverIndex, isError, responseTimeMicros, false, servers);
   }
 
-  void releaseServer(int serverIndex, boolean isError, long responseTimeMicros, boolean adaptive) {
+  void releaseServer(int serverIndex, boolean isError, long responseTimeMicros, boolean adaptive, List<Server> servers) {
     configReadLock.lock();
     try {
-      List<Server> servers = upstreamConfig.getServers();
       if (serverIndex < 0 || serverIndex >= servers.size()) {
         return;
       }
